force-app/main/default/objects/Rollup_Requested_Amount_to_Billing__c/Rollup_Requested_Amount_to_Billing__c.object-meta.xml
<CustomObject>
    <label>Rollup Requested Amount to Billing</label>
    <nameField>
        <displayFormat>RRATB{000000000}</displayFormat>
        <label>Rollup Requested Amount to Billing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Requested Amount to Billing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>