force-app/main/default/objects/Rollup_Requested_Amount_to_Billing__c/fields/Billings__c.field-meta.xml
<CustomField>
    <fullName>Billings__c</fullName>
    <label>Billings</label>
    <referenceTo>ConsolBill__c</referenceTo>
    <relationshipLabel>Rollup Requested Amount to Billing</relationshipLabel>
    <relationshipName>Rollup_Requested_Amount_to_Billing</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>