force-app/main/default/objects/Rollup_Requested_Amount_to_Billing__c/fields/Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Amount__c</fullName>
    <label>Deduction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>