force-app/main/default/objects/Rollup_Requested_Amount_to_Billing__c/fields/Deduction_Currency__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Currency__c</fullName>
    <label>Deduction Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>